--- a/backend/deno.json
+++ b/backend/deno.json
@@ -3,14 +3,15 @@
   "version": "0.0.0",
   "exports": "./main.ts",
   "tasks": {
-    "start": "deno serve -A main.ts",
-    "dev": "deno serve -A --watch main.ts"
+    "start": "deno serve --env-file -A main.ts",
+    "dev": "deno serve --env-file -A --watch main.ts"
   },
   "compilerOptions": {
     "jsx": "precompile",
     "jsxImportSource": "hono/jsx"
   },
   "imports": {
-    "@db/sqlite": "jsr:@db/sqlite@^0.12.0"
+    "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
+    "@hono/clerk-auth": "npm:@hono/clerk-auth@^3.0.3"
   }
 }
