--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.57.0",
     "@reduxjs/toolkit": "^2.10.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
