--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.2.1"
+    "vite": "^7.2.1",
+    "vite-plugin-checker": "^0.11.0"
   }
 }
