--- a/backend/deno.json
+++ b/backend/deno.json
@@ -4,7 +4,8 @@
   "exports": "./main.ts",
   "tasks": {
     "start": "deno serve --env-file -A main.ts",
-    "dev": "deno serve --env-file -A --watch main.ts"
+    "dev": "deno serve --env-file -A --watch main.ts",
+    "test": "deno test -A --watch"
   },
   "compilerOptions": {
     "jsx": "precompile",
@@ -12,6 +13,7 @@
   },
   "imports": {
     "@db/sqlite": "jsr:@db/sqlite@^0.12.0",
-    "@hono/clerk-auth": "npm:@hono/clerk-auth@^3.0.3"
+    "@hono/clerk-auth": "npm:@hono/clerk-auth@^3.0.3",
+    "@std/assert": "jsr:@std/assert@^1.0.16"
   }
 }
