--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,7 +32,6 @@
     "globals": "^16.4.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.45.0",
-    "vite": "^7.3.1",
-    "vite-plugin-checker": "^0.12.0"
+    "vite": "^7.3.1"
   }
 }
