--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 CLERK_PUBLISHABLE_KEY=pk_test_Zml0dGluZy1zcXVpcnJlbC0xMC5jbGVyay5hY2NvdW50cy5kZXYk
 CLERK_SECRET_KEY=sk_test_dqyArSXaLufoenalAdyE6EnK5qnNdeRVwdjnCCIfnY
+ALLOWED_ORIGINS=http://localhost:8080
